modified:   index.html

--- a/index.html
+++ b/index.html
@@ -65,14 +65,18 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
             <!-- ==== ADD A SINGLE SECTION ==== -->
             <!-- To add a new section (simple link), copy and update one of the lines below -->
             <li class="nav-item"><a class="nav-link" onclick="showPage('home')">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.leedsth.nhs.uk/hospitals/" target="_blank">Site maps: Our hospitals</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.leedsth.nhs.uk/hospitals/" target="_blank">Site
+                maps: Our hospitals</a></li>
 
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_RJ');">Recruitment Journey</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="showPage('pre-employment-health');">Occupational
+                Health</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_LWV');">The Leeds Way Values</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_7C');">7 Commitments</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_D1');">Day One</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_UC');">Useful Contacts</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.leedsth.nhs.uk/news/" target="_blank">Trust News</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.leedsth.nhs.uk/news/" target="_blank">Trust
+                News</a></li>
 
           </ul>
         </div>
@@ -86,7 +90,8 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
       <div class="row align-items-center g-2">
         <!-- Site Search -->
         <div class="col">
-          <input type="text" id="searchInput" class="form-control" placeholder="Search the site" onkeyup="searchPages()" />
+          <input type="text" id="searchInput" class="form-control" placeholder="Search the site"
+            onkeyup="searchPages()" />
         </div>
         <!-- Theme & Accessibility Controls -->
         <div class="col-auto">
@@ -136,7 +141,8 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
 
               <div class="Welcome_welcome">
                 <div class="Welcome_image-container">
-                  <img src="https://assets.codepen.io/8889025/LTHNHST_App1.png" alt="Leeds Teaching Hospitals NHS Trust">
+                  <img src="https://assets.codepen.io/8889025/LTHNHST_App1.png"
+                    alt="Leeds Teaching Hospitals NHS Trust">
                 </div>
                 🎉 Welcome 🎉
               </div>
@@ -147,7 +153,8 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
                 Caring for the people of Leeds and beyond with compassion, skill, and innovation.
               </div>
               <div class="Welcome_hospitals">
-                Leeds General Infirmary · St James’s University Hospital · Chapel Allerton Hospital · Seacroft Hospital · Wharfedale Hospital
+                Leeds General Infirmary · St James’s University Hospital · Chapel Allerton Hospital · Seacroft Hospital
+                · Wharfedale Hospital
               </div>
               <div class="Welcome_footer">
                 Together we are making a difference.
@@ -157,7 +164,9 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
 
           <p>Congratulations on your appointment at The Leeds Teaching Hospitals NHS Trust.</p>
 
-          <p>As one of the largest NHS Trusts in the UK, we employ approximately 22,000 people across the region. Like any complex organisation, our jobs in Leeds cover all aspects of ensuring the day-to-day delivery of our services to over 1.5 million patients every year.</p>
+          <p>As one of the largest NHS Trusts in the UK, we employ approximately 22,000 people across the region. Like
+            any complex organisation, our jobs in Leeds cover all aspects of ensuring the day-to-day delivery of our
+            services to over 1.5 million patients every year.</p>
 
           <p>Here you will find information and resources to support you in joining the Trust. </p>
         </div>
@@ -169,12 +178,15 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
       </div>
       <div class="row">
         <div class="col-6">
-          <a href="https://www.leedsth.nhs.uk/hospitals/" target="_blank" class="btn btn-primary w-100 mb-2">Site maps: Our hospitals</a>
+          <a href="https://www.leedsth.nhs.uk/hospitals/" target="_blank" class="btn btn-primary w-100 mb-2">Site maps:
+            Our hospitals</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_RJ');">Recruitment Journey</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_LWV');">The Leeds Way Values</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_7C');">7 Commitments</a>
         </div>
         <div class="col-6">
+          <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('pre-employment-health');">Occupational
+            Health</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_D1');">Day One</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('pp_UC');">Useful Contacts</a>
           <a href="https://www.leedsth.nhs.uk/news/" target="_blank" class="btn btn-primary w-100 mb-2">Trust News</a>
@@ -205,7 +217,8 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
       <div class="row">
         <div class="col-md">
           <div class="text-center">
-            <img src="https://assets.codepen.io/8889025/LTHNHST_App2.png" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+            <img src="https://assets.codepen.io/8889025/LTHNHST_App2.png" class="img-fluid rounded shadow-sm"
+              style="max-width: 100%; height: auto;">
 
             <small class="d-block mt-2 text-muted">Illustration of the Recruitment Journey</small>
             <!--* Replace the # with optional text text that will appear under the image *-->
@@ -226,20 +239,23 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
         <div class="col-md-4 gradient-col d-flex align-items-center justify-content-center">
           <h3 class="gradient-text">The Leeds Way Values</h3>
           <div class="text-center">
-            <img src="https://assets.codepen.io/8889025/LTHNHST_App3.png" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+            <img src="https://assets.codepen.io/8889025/LTHNHST_App3.png" class="img-fluid rounded shadow-sm"
+              style="max-width: 100%; height: auto;">
           </div>
 
         </div>
 
         <div class="col-md-8">
           <p>Our values were designed by our staff in 2014, and they are still relevant to how we work today.
-            Each of the values is crucial to our organisation and they all link together to ensure that we provide the best possible care for our patients and a supportive environment for all colleagues.</p>
+            Each of the values is crucial to our organisation and they all link together to ensure that we provide the
+            best possible care for our patients and a supportive environment for all colleagues.</p>
         </div>
       </div>
       <div class="row mt-4">
         <div class="col-md">
           <div class="text-center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JNtjuScpiw0" frameborder="0" allowfullscreen>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JNtjuScpiw0" frameborder="0"
+              allowfullscreen>
             </iframe>
           </div>
         </div>
@@ -258,21 +274,24 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
         </div>
         <!-- Catalogue Description -->
         <div class="col-md-8">
-          <p>Our 7 Commitments are about focusing our collective efforts across the Trust to make progress in what matters most.</p>
+          <p>Our 7 Commitments are about focusing our collective efforts across the Trust to make progress in what
+            matters most.</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md">
         <div class="text-center">
-          <img src="https://assets.codepen.io/8889025/LTHNHST_App4.png" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+          <img src="https://assets.codepen.io/8889025/LTHNHST_App4.png" class="img-fluid rounded shadow-sm"
+            style="max-width: 100%; height: auto;">
 
           <small class="d-block mt-2 text-muted">Illustration of the 7 Commitments</small>
           <!--* Replace the # with optional text text that will appear under the image *-->
 
         </div>
         <div class="text-center">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/LgzRYpuNLIM" frameborder="0" allowfullscreen>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/LgzRYpuNLIM" frameborder="0"
+            allowfullscreen>
           </iframe>
         </div>
       </div>
@@ -291,17 +310,27 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
         </div>
         <!-- Section Description -->
         <div class="col-md-8">
-          <p>All new substantive staff members must attend Corporate Induction on the first day of appointment. Your new line manager will arrange this for you and you will be sent the details via email closer to your start date. Temporary staff such as Bank, Agency, Locum and those on Honorary contracts may attend at their line manager’s discretion.</p>
+          <p>All new substantive staff members must attend Corporate Induction on the first day of appointment. Your new
+            line manager will arrange this for you and you will be sent the details via email closer to your start date.
+            Temporary staff such as Bank, Agency, Locum and those on Honorary contracts may attend at their line
+            manager’s discretion.</p>
 
-          <p>Corporate Induction is an all-day session and takes place on the first working day within the Trust. By the end of the Corporate Induction process the majority of all Mandatory Training will have been completed, therefore most staff will arrive in the workplace with their Mandatory Training requirements satisfied. </p>
+          <p>Corporate Induction is an all-day session and takes place on the first working day within the Trust. By the
+            end of the Corporate Induction process the majority of all Mandatory Training will have been completed,
+            therefore most staff will arrive in the workplace with their Mandatory Training requirements satisfied. </p>
 
-          <p>A Local Induction should be completed within 28 days of commencing work within the Trust. Local Induction is mandatory for all staff including temporary, Bank, Agency, Locum and those on Honorary contracts. It underpins the overall knowledge gained during the Corporate Induction process. Local Induction introduces new staff to local arrangements and identifies outstanding Mandatory Training, specifically Equality & Diversity and resuscitation training, among others. </p>
+          <p>A Local Induction should be completed within 28 days of commencing work within the Trust. Local Induction
+            is mandatory for all staff including temporary, Bank, Agency, Locum and those on Honorary contracts. It
+            underpins the overall knowledge gained during the Corporate Induction process. Local Induction introduces
+            new staff to local arrangements and identifies outstanding Mandatory Training, specifically Equality &
+            Diversity and resuscitation training, among others. </p>
         </div>
       </div>
       <div class="row">
         <div class="col-md">
           <div class="text-center">
-            <img src="https://assets.codepen.io/8889025/LTHNHST_App5.png" class="img-fluid rounded shadow-sm" style="max-width: 100%; height: auto;">
+            <img src="https://assets.codepen.io/8889025/LTHNHST_App5.png" class="img-fluid rounded shadow-sm"
+              style="max-width: 100%; height: auto;">
 
           </div>
         </div>
@@ -342,6 +371,56 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
           <ul style="list-style:none;">
             <li><a href="leedsth-tr.eTravel@nhs.net">leedsth-tr.eTravel@nhs.net</a>
           </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===================================== -->
+  <!-- = Occupational Health  = -->
+  <!-- ===================================== -->
+  <div id="pre-employment-health" class="page">
+    <div class="container">
+      <div class="row">
+        <!-- Sidebar Gradient -->
+        <div class="col-md-4 gradient-col d-flex align-items-center justify-content-center">
+          <h3 class="gradient-text">Occupational Health </h3>
+        </div>
+
+        <!-- Page Introduction -->
+        <div class="col-md-8">
+          <p>As part of onboarding for your new role, you will need to complete a Pre-employment health questionnaire
+            and provide evidence of immunisations you have already had.  This enables Occupational Health (OH) to ensure
+            you’re fit for role and to support any workplace adjustments you may need.
+          </p>
+
+          <h5 class="mt-4">What is involved?</h5>
+          <ul>
+            <li>Complete pre-employment health questionnaire (sent separately via OPAS G2)</li>
+            <li>Provide evidence of immunisations (e.g. MMR, Hep B, Varicella).</li>
+            <li>Following submission of your form OH will review your information.  If a full immunisations history is
+              not provided for staff in patient facing roles, OH will contact you for further review and invite you to
+              attend an OH appointment prior to clearance.</li>
+            <li>If you indicate that you require workplace adjustments due to a health condition, OH will contact you
+              for further discussion to ensure you are supported when you start in post.</li>
+            <li>OH will issue a clearance certificate once all health checks have been completed.</li>
+          </ul>
+
+          <p>All information is confidential and helps to ensure a safe working environment for you and our patients.
+          </p>
+          <p><strong>Please note:</strong> Failure to provide the requested information promptly can lead to delays with
+            your OH clearance and potentially affect your start date.</p>
+          <p>If you have any questions, please contact Occupational Health on 0113 2065228 or <a
+              href="mailto:occupationalhealthlth@nhs.net">occupationalhealthlth@nhs.net</a>.</p>
+        </div>
+      </div>
+
+
+      <!-- Page full width content -->
+      <div class="row mt-4">
+        <div class="col-md">
+          <!--* Secondary full page section if required. Put your page content here *-->
+          <!-- You could add a downloadable checklist, FAQ accordion, or mascot-led explainer here -->
         </div>
       </div>
     </div>
