modified:   index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
             <li class="nav-item"><a class="nav-link" onclick="showPage('pre-employment-health');">Occupational
                 Health</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_LWV');">The Leeds Way Values</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="showPage('App_7C');">7 Commitments</a></li>
+            <!--<li class="nav-item"><a class="nav-link" onclick="showPage('App_7C');">7 Commitments</a></li>-->
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_D1');">Day One</a></li>
             <li class="nav-item"><a class="nav-link" onclick="showPage('App_UC');">Useful Contacts</a></li>
             <li class="nav-item"><a class="nav-link" href="https://www.leedsth.nhs.uk/news/" target="_blank">Trust
@@ -182,11 +182,12 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
             Our hospitals</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_RJ');">Recruitment Journey</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_LWV');">The Leeds Way Values</a>
-          <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_7C');">7 Commitments</a>
-        </div>
-        <div class="col-6">
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('pre-employment-health');">Occupational
             Health</a>
+          <!--<a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_7C');">7 Commitments</a>-->
+        </div>
+        <div class="col-6">
+
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('App_D1');">Day One</a>
           <a class="btn btn-primary w-100 mb-2" href="#" onclick="showPage('pp_UC');">Useful Contacts</a>
           <a href="https://www.leedsth.nhs.uk/news/" target="_blank" class="btn btn-primary w-100 mb-2">Trust News</a>
@@ -264,15 +265,15 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
   </div>
   <!-- ====================================== -->
   <!-- ====== 7 Commitments SECTION ====== -->
-  <!-- ====================================== -->
+  <!-- ====================================== 
   <div id="App_7C" class="page">
     <div class="container">
       <div class="row">
-        <!-- Sidebar Gradient -->
+        <!-- Sidebar Gradient 
         <div class="col-md-4 gradient-col d-flex align-items-center justify-content-center">
           <h3 class="gradient-text">7 Commitments</h3>
         </div>
-        <!-- Catalogue Description -->
+        <!-- Catalogue Description 
         <div class="col-md-8">
           <p>Our 7 Commitments are about focusing our collective efforts across the Trust to make progress in what
             matters most.</p>
@@ -286,7 +287,7 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
             style="max-width: 100%; height: auto;">
 
           <small class="d-block mt-2 text-muted">Illustration of the 7 Commitments</small>
-          <!--* Replace the # with optional text text that will appear under the image *-->
+          <!--* Replace the # with optional text text that will appear under the image 
 
         </div>
         <div class="text-center">
@@ -296,7 +297,7 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- ==================================================== -->
   <!-- ====== Day One SECTION ====== -->
